Updated projects lists

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Pedro Muniz",
-  "name": "Pedro Muniz",
+  "short_name": "Ajinkya Jadhav",
+  "name": "Ajinkya",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "Ajinkya Jadhav-logos_white.png",
       "type": "image/png",
       "sizes": "192x192"
     }
