--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.7",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.9.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
